change the author.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Darktea</a>
+    <a href="/">xuyiyu</a>
     <a class="extra" href="/">Home</a>
   </div>
   
