--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="darktea" />
-   <link href="/atom.xml" rel="alternate" title="Darktea" type="application/atom+xml">
+   <meta name="author" content="xuyiyu" />
+   <link href="/atom.xml" rel="alternate" title="xuyiyu" type="application/atom+xml">
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -33,7 +33,7 @@
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/darktea/">github.com/darktea</a>
+        <a href="http://github.com/xuyiyu/">github.com/xuyiyu</a>
       </p>
     </div>
     <div class="rss">
