--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        darktea<br />
+        xuyiyu<br />
         <img src="/images/darktea.bmp" height="15px" /><br />
       </p>
     </div>
