--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'darktea';
+    var disqus_shortname = 'xuyiyu';
     var disqus_identifier = '{{ page.id }}';
 
     (function() {
