--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        xuyiyu<br />
-        <img src="/images/darktea.bmp" height="15px" /><br />
+        meueax@gmail.com
       </p>
     </div>
     <div class="contact">
