--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/xuyiyu/">github.com/xuyiyu</a>
+        <a href="http://github.com/xuyiyu/">Github</a>
       </p>
     </div>
     <div class="rss">
